fix(mpc4j): v1.1.4-beta.